# sport-monorepo

./: .gitignore  README.md
libs/: README.md
libs/garmin-connect-client/: .gitignore  README.md  pyproject.toml
libs/garmin-connect-client/docs/: activity details.md  activity summary.md  list activities for date.md  search activities.md  splits.md  typed splits.md
libs/garmin-connect-client/garmin_connect_client/: __init__.py  activity_details_response.py  garmin_connect_client.py  responses.py
libs/garmin-connect-client/garmin_connect_client/garmin_connect_token_managers/: __init__.py  base_garmin_connect_token_manager.py  fake_test_garmin_connect_token_manager.py  file_garmin_connect_token_manager.py
libs/garmin-connect-client/tests/: conftest.py  test_garmin_connect_client.py
libs/garmin-connect-client/tests/cassettes/test_garmin_connect_client/: TestDownloadFitContent.test_happy_flow.yaml  TestGetActivityDetails.test_happy_flow.yaml  TestGetActivitySplits.test_6x300m_with_lap_button_press.yaml  TestGetActivitySplits.test_count_active_splits.yaml  TestGetActivitySplits.test_sarnico_lovere_with_auto_lap_feature.yaml  TestGetActivitySummary.test_happy_flow.yaml  TestGetActivitySummary.test_has_NOT_heart_rate_monitor.yaml  TestGetActivitySummary.test_has_heart_rate_monitor_new_hrm_200.yaml  TestGetActivitySummary.test_has_heart_rate_monitor_old_hrm_dual.yaml  TestGetActivityTypedSplits.test_happy_flow.yaml  TestListActivities.test_datetime.yaml  TestListActivities.test_ensure_avg_hr_same_as_in_get_activity_summary.yaml  TestListActivities.test_happy_flow.yaml  TestSearchActivities.test_distance.yaml  TestSearchActivities.test_duration.yaml  TestSearchActivities.test_elevation.yaml  TestSearchActivities.test_happy_flow.yaml  TestSearchActivities.test_long_distance_run.yaml  TestSearchActivities.test_n_results.yaml  TestSearchActivities.test_no_params.yaml
libs/strava-client/: .gitignore  README.md  pyproject.toml  strava-api-token.json.EXAMPLE
libs/strava-db-models/: README.md  pyproject.toml
projects/: README.md
projects/sport-analysis/: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
projects/sport-analysis/fixtures/: garmin-activities-typed-splits-18520928352-and-18520928686-merged.json
projects/sport-analysis/sport_analysis/: base_cli_view.py  cli.py  health_cli_view.py
projects/sport-analysis/sport_analysis/conf/: __init__.py  settings_module.py
projects/sport-analysis/sport_analysis/count/: count_activities_db.py
projects/sport-analysis/sport_analysis/plot/: base_api.py  base_plot.py
projects/sport-analysis/sport_analysis/plot/plot_interval_run_api/: base_plot_interval_run_api.py  plot_interval_1000m_run_api.py  plot_interval_300m_run_api.py
projects/sport-analysis/sport_analysis/plot/plot_like_garmin_and_strava_websites/: plot_like_garmin_and_strava_websites.py
projects/sport-analysis/sport_analysis/plot/plot_run/: plot_21km_run_api.py
projects/sport-analysis/sport_analysis/plot/plot_run_api/: base_plot_run_api.py  plot_10km_run_api.py
projects/sport-analysis/sport_analysis/search/: search_matching_activity_api.py  search_text_db.py
projects/sport-analysis/sport_analysis/sketches/: compare_avg_hr_in_strava_vs_garmin_vs_computed_api.py
projects/sport-analysis/tests/: conftest.py
projects/sport-analysis/tests/count/: test_count_activities_db.py
projects/sport-analysis/tests/plot/plot_interval_run/: test_plot_interval_1000m_run_api.py  test_plot_interval_300m_run_api.py
projects/sport-analysis/tests/plot/plot_interval_run/cassettes/test_plot_interval_300m_run_api/: TestPlotInterval300mRunApi.test_n_previous_activity_to_compare_1.yaml
projects/sport-analysis/tests/plot/plot_interval_run_api/: test_plot_interval_1000m_run_api.py  test_plot_interval_300m_run_api.py
projects/sport-analysis/tests/plot/plot_interval_run_api/cassettes/test_plot_interval_1000m_run_api/: TestPlotInterval1000mRunApi.test_diff_n_intervals.yaml  TestPlotInterval1000mRunApi.test_happy_flow.yaml
projects/sport-analysis/tests/plot/plot_interval_run_api/cassettes/test_plot_interval_300m_run_api/: TestPlotInterval300mRunApi.test_happy_flow.yaml  TestPlotInterval300mRunApi.test_n_previous_activity_to_compare_0.yaml  TestPlotInterval300mRunApi.test_n_previous_activity_to_compare_2.yaml
projects/sport-analysis/tests/plot/plot_like_garmin_and_strava_websites/: test_plot_like_garmin_and_strava_websites.py
projects/sport-analysis/tests/plot/plot_like_garmin_and_strava_websites/cassettes/test_plot_like_garmin_and_strava_websites/: TestPlotLikeGarminAndStravaWebsitesApi.test_1.yaml  TestPlotLikeGarminAndStravaWebsitesApi.test_3.yaml  TestPlotLikeGarminAndStravaWebsitesApi.test_4.yaml
projects/sport-analysis/tests/plot/plot_like_garmin_and_strava_websites_api/: test_plot_like_garmin_and_strava_websites.py
projects/sport-analysis/tests/plot/plot_like_garmin_and_strava_websites_api/cassettes/test_plot_like_garmin_and_strava_websites/: TestPlotLikeGarminAndStravaWebsitesApi.test_2.yaml  TestPlotLikeGarminAndStravaWebsitesApi.test_5.yaml
projects/sport-analysis/tests/plot/plot_run/: test_plot_10km_run_api.py  test_plot_21km_run_api.py
projects/sport-analysis/tests/plot/plot_run_api/: test_plot_10km_run_api.py  test_plot_21km_run_api.py
projects/sport-analysis/tests/plot/plot_run_api/cassettes/test_plot_10km_run_api/: TestPlot10KmRunApi.test_happy_flow.yaml
projects/sport-analysis/tests/search/: test_search_matching_activity_api.py  test_search_text_db.py
projects/sport-analysis/tests/search/cassettes/test_search_matching_activity_api/: TestSearchGarminActivityMatchingStravaActivity.test_happy_flow.yaml  TestSearchStravaActivityMatchingGarminActivityApi.test_happy_flow.yaml
projects/sport-analysis/tests/sketches/: test_compare_avg_hr_in_strava_vs_garmin_vs_computed_api.py
projects/strava-exporter-to-db/: Makefile  README.md  pyproject.toml
projects/strava-exporter-to-db/strava_exporter_to_db/: cli.py  console.py  data_models.py  exporter.py
projects/strava-exporter-to-db/tests/: test_cli.py
projects/strava-facade-api/: .gitignore  (+5 more)
(+291 files in other folders)
